# BlackStackSQL

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RULES.md  main.py  pyproject.toml  setup.py
core/: crawler.py  dbms_detector.py  injector.py
docs/: LEGAL.html  commands.md  configuration.md  index.html
modules/: dumper.py  waf.py
payloads/: boolean_based.txt  classic.txt  error_based.txt  time_based.txt  union_based.txt
payloads/dbms/: mssql.txt  mysql.txt  oracle.txt  postgres.txt
payloads/waf_evasion/: comments.txt  encoded.txt  random_case.txt
ui/: cli.py
utils/: encoder.py  logger.py  proxy.py
